[gd_scene load_steps=5 format=3 uid="uid://ccg1vo23tjaa2"]

[ext_resource type="Script" path="res://Level Editor/Scripts/object_button.gd" id="1_f8y1d"]
[ext_resource type="Shader" path="res://Level Editor/Assets/Shaders/Outline_Shader.gdshader" id="2_8yu2r"]
[ext_resource type="Texture2D" uid="uid://2immnavaowka" path="res://Level Editor/Assets/Icons/Object Sprites/Bumper_Purple.png" id="3_st30f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kuy5n"]
resource_local_to_scene = true
shader = ExtResource("2_8yu2r")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="ObjectButton" type="Button"]
modulate = Color(1, 1, 1, 0.00784314)
z_index = 10
offset_right = 60.0
offset_bottom = 60.0
script = ExtResource("1_f8y1d")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_kuy5n")
position = Vector2(30, 30)
scale = Vector2(4, 4)
texture = ExtResource("3_st30f")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
